force-app/main/default/src/objects/PJN_AE_Medical_History__c/PJN_AE_Medical_History__c.object-meta.xml
<CustomObject>
    <label>AE Medical History</label>
    <nameField>
        <displayFormat>AE-MH-{00000000}</displayFormat>
        <label>AE Medical History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AE Medical History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>