force-app/main/default/src/objects/PJN_AE_Medical_History__c/fields/PJN_Adverse_Event__c.field-meta.xml
<CustomField>
    <fullName>PJN_Adverse_Event__c</fullName>
    <label>Adverse Event</label>
    <referenceTo>PJN_Adverse_Event__c</referenceTo>
    <relationshipLabel>AE Medical History</relationshipLabel>
    <relationshipName>PJN_AE_Medical_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>