force-app/main/default/src/objects/PJN_AE_Medical_History__c/fields/PJN_Comments__c.field-meta.xml
<CustomField>
    <fullName>PJN_Comments__c</fullName>
    <description>E2B (R2): B.1.7.1g, patientmedicalcomment (100AN)
E2B (R2): B.1.10.7.1g, parentmedicalcomment (100AN)

E2B (R3): D.7.1.r.5 Comments
E2B (R3): D.10.7.1.r.5 Comments
Conformance: Optional
Data Type: 2000AN
OID: None
Value Allowed: Free text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This data element provides additional relevant information about the ‘medical condition’ that could not be captured otherwise in a structured data element.</inlineHelpText>
    <label>Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>