force-app/main/default/src/objects/PJN_AE_Medical_History__c/fields/PJN_Continuing__c.field-meta.xml
<CustomField>
    <fullName>PJN_Continuing__c</fullName>
    <description>E2B (R2): B.1.7.1d, patientmedicalcontinue (1N)
E2B (R2): B.1.10.7.1d, parentmedicalcontinue (1N)

E2B (R3): D.7.1.r.3 Continuing
E2B (R3): D.10.7.1.r.3 Continuing
Conformance: Optional
Data Type: Boolean
OID: None
Value Allowed:
false
true
nullFlavor: MSK, ASKU, NASK</description>
    <inlineHelpText>Indicates if the ‘medical condition’ is known to be still present at the time of this report.</inlineHelpText>
    <label>Continuing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Yes_No</valueSetName>
    </valueSet>
</CustomField>