force-app/main/default/src/objects/PJN_AE_Medical_History__c/fields/PJN_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_End_Date__c</fullName>
    <description>E2B (R2):  B.1.7.1e, patientmedicalenddateformat (3N) --&gt; Value should be 102 AND B.1.7.1f, patientmedicalenddate (8N) --&gt; convert to CCYYMMDD
E2B (R2):  B.1.10.7.1e, parentmedicalenddateformat (3N) --&gt; Value should be 102 AND B.1.10.7.1f, parentmedicalenddate (8N) --&gt; convert to CCYYMMDD

E2B (R3): D.7.1.r.4 End Date
E2B (R3): D.10.7.1.r.4 End Date
Conformance: Optional
Data Type: Date / Time
OID: None
Value Allowed:
See Appendix II for further information.
nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If precise dates are unknown and a text description aids in understanding the medical history, or if concise additional information is helpful in showing the relevance of the past medical history, this information can be included in the comments column.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>