force-app/main/default/src/objects/PJN_AE_Medical_History__c/fields/PJN_Family_History__c.field-meta.xml
<CustomField>
    <fullName>PJN_Family_History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>E2B (R2): NA

E2B (R3): D.7.1.r.6 Family History
Conformance: Optional
Data Type: Boolean
OID: None
Value Allowed: True</description>
    <inlineHelpText>Set to ‘true’ when the medical information provided is also present in another family member (e.g. hereditary diseases). However, this data element is not used when the same medical concept is already provided in the medical history of the parent.</inlineHelpText>
    <label>Family History</label>
    <type>Checkbox</type>
</CustomField>