force-app/main/default/src/objects/PJN_AE_Medical_History__c/fields/PJN_MedDRA_Version_for_Medical_History__c.field-meta.xml
<CustomField>
    <fullName>PJN_MedDRA_Version_for_Medical_History__c</fullName>
    <description>E2B (R2): B.1.7.1a.1, patientepisodenamemeddraversion (8AN)
E2B (R2): B.1.10.7.1a.1, parentmdepisodenamemeddraversion (8AN)

E2B (R3): D.7.1.r.1a MedDRA Version for Medical History
E2B (R3): D.10.7.1.r.1a MedDRA Version for Medical History
Conformance: Optional, but required if D.7.1.r.1b is populated.
Data Type: 4AN
OID: None
Value Allowed: Numeric and ‘. ‘(dot)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If applicable, MedDRA terms should be used in the main description for disease or surgical procedures.</inlineHelpText>
    <label>MedDRA Version for Medical History</label>
    <length>4</length>
    <type>Text</type>
</CustomField>