force-app/main/default/src/objects/PJN_AE_Medical_History__c/fields/PJN_Parent_History__c.field-meta.xml
<CustomField>
    <fullName>PJN_Parent_History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if we are in E2B (R2) B.1.7.1 or B.1.10.7.1</description>
    <inlineHelpText>Indicates if the history is for the parent or the patient. This should be used in the case of a parent-child or parent-fetus report where the parent had no reaction or event.</inlineHelpText>
    <label>Parent History?</label>
    <type>Checkbox</type>
</CustomField>