force-app/main/default/src/objects/PJN_AE_Medical_History__c/recordTypes/PJN_AE_Medical_History.recordType-meta.xml
<RecordType>
    <fullName>PJN_AE_Medical_History</fullName>
    <active>true</active>
    <label>AE Medical History</label>
</RecordType>