force-app/main/default/src/objects/PJN_AE_Medical_History__c/recordTypes/PJN_AE_Medical_History_Closed.recordType-meta.xml
<RecordType>
    <fullName>PJN_AE_Medical_History_Closed</fullName>
    <active>true</active>
    <label>AE Medical History - Closed</label>
</RecordType>